feat(presentation): add api versioning packages

--- a/Moisesduartem.WebApiTemplate.Presentation/Moisesduartem.WebApiTemplate.Presentation.csproj
+++ b/Moisesduartem.WebApiTemplate.Presentation/Moisesduartem.WebApiTemplate.Presentation.csproj
@@ -7,7 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="5.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="V1\Controllers\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Moisesduartem.WebApiTemplate.IoC\Moisesduartem.WebApiTemplate.IoC.csproj" />
   </ItemGroup>
 
 </Project>
