--- a/Moisesduartem.WebApiTemplate.Application/Moisesduartem.WebApiTemplate.Application.csproj
+++ b/Moisesduartem.WebApiTemplate.Application/Moisesduartem.WebApiTemplate.Application.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ErrorOr" Version="1.0.0" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.2.2" />
+    <PackageReference Include="MediatR" Version="10.0.1" />
   </ItemGroup>
 
   <ItemGroup>
