feat: fv + cors + exception handling middleware

--- a/Moisesduartem.WebApiTemplate.Presentation/appsettings.Development.json
+++ b/Moisesduartem.WebApiTemplate.Presentation/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ApiClient": {
+    "BaseUrl": "http://localhost:3000"
   }
 }
