--- a/Moisesduartem.WebApiTemplate.Presentation/Moisesduartem.WebApiTemplate.Presentation.csproj
+++ b/Moisesduartem.WebApiTemplate.Presentation/Moisesduartem.WebApiTemplate.Presentation.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="5.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
