--- a/Moisesduartem.WebApiTemplate.Presentation/Properties/launchSettings.json
+++ b/Moisesduartem.WebApiTemplate.Presentation/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "Moisesduartem.WebApiTemplate.Presentation": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
