feat: configure fluent validation on domain's layer

--- a/Moisesduartem.WebApiTemplate.Domain/Moisesduartem.WebApiTemplate.Domain.csproj
+++ b/Moisesduartem.WebApiTemplate.Domain/Moisesduartem.WebApiTemplate.Domain.csproj
@@ -10,4 +10,8 @@
     <None Include="..\.editorconfig" Link=".editorconfig" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.2.1" />
+  </ItemGroup>
+
 </Project>
