--- a/src/Moisesduartem.WebApiTemplate.Application/Moisesduartem.WebApiTemplate.Application.csproj
+++ b/src/Moisesduartem.WebApiTemplate.Application/Moisesduartem.WebApiTemplate.Application.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -7,7 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Moisesduartem.WebApiTemplate.Application\Moisesduartem.WebApiTemplate.Application.csproj" />
+    <PackageReference Include="FluentResults" Version="3.11.0" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.2.2" />
+    <PackageReference Include="MediatR" Version="10.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Moisesduartem.WebApiTemplate.Domain\Moisesduartem.WebApiTemplate.Domain.csproj" />
   </ItemGroup>
 
