--- a/src/Moisesduartem.WebApiTemplate.Domain/Moisesduartem.WebApiTemplate.Domain.csproj
+++ b/src/Moisesduartem.WebApiTemplate.Domain/Moisesduartem.WebApiTemplate.Domain.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="..\.editorconfig" Link=".editorconfig" />
+    <None Include="..\..\.editorconfig" Link=".editorconfig" />
   </ItemGroup>
 
   <ItemGroup>
