--- a/src/Moisesduartem.WebApiTemplate.Infra/Moisesduartem.WebApiTemplate.Infra.csproj
+++ b/src/Moisesduartem.WebApiTemplate.Infra/Moisesduartem.WebApiTemplate.Infra.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.8" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Moisesduartem.WebApiTemplate.Application\Moisesduartem.WebApiTemplate.Application.csproj" />
     <ProjectReference Include="..\Moisesduartem.WebApiTemplate.Domain\Moisesduartem.WebApiTemplate.Domain.csproj" />
   </ItemGroup>
