--- a/src/Moisesduartem.WebApiTemplate.Application/Moisesduartem.WebApiTemplate.Application.csproj
+++ b/src/Moisesduartem.WebApiTemplate.Application/Moisesduartem.WebApiTemplate.Application.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="11.0.0" />
     <PackageReference Include="FluentResults" Version="3.11.0" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.2.2" />
     <PackageReference Include="MediatR" Version="10.0.1" />
