fix: move jwt secret to appsettings

--- a/src/Moisesduartem.WebApiTemplate.Presentation/appsettings.Development.json
+++ b/src/Moisesduartem.WebApiTemplate.Presentation/appsettings.Development.json
@@ -7,5 +7,8 @@
   },
   "ApiClient": {
     "BaseUrl": "http://localhost:3000"
+  },
+  "Authentication": {
+    "Secret": "edaf7d8863b48e197b9287d492b708e"
   }
 }
