--- a/src/Moisesduartem.WebApiTemplate.Presentation/appsettings.Development.json
+++ b/src/Moisesduartem.WebApiTemplate.Presentation/appsettings.Development.json
@@ -10,5 +10,8 @@
   },
   "Authentication": {
     "Secret": "edaf7d8863b48e197b9287d492b708e"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=WebApiTemplate;Trusted_Connection=True;"
   }
 }
