--- a/src/Moisesduartem.WebApiTemplate.Infra/Moisesduartem.WebApiTemplate.Infra.csproj
+++ b/src/Moisesduartem.WebApiTemplate.Infra/Moisesduartem.WebApiTemplate.Infra.csproj
@@ -9,6 +9,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.8" />
   </ItemGroup>
 
   <ItemGroup>
