fix: remove eaccountrole & token service

--- a/src/RestApi.Identity/RestApi.Identity.csproj
+++ b/src/RestApi.Identity/RestApi.Identity.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\RestApi.Persistence\RestApi.Persistence.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
