feat: register user flow

--- a/src/RestApi.Identity/RestApi.Identity.csproj
+++ b/src/RestApi.Identity/RestApi.Identity.csproj
@@ -14,11 +14,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\RestApi.Application\RestApi.Application.csproj" />
     <ProjectReference Include="..\RestApi.Persistence\RestApi.Persistence.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
