--- a/src/RestApi/appsettings.Development.json
+++ b/src/RestApi/appsettings.Development.json
@@ -13,5 +13,11 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=WebApiTemplate;Trusted_Connection=True;"
+  },
+  "JwtOptions": {
+    "Issuer": "https://localhost",
+    "Audience": "Audience",
+    "SecurityKey": "edaf7d8863b48e197b9287d492b708e",
+    "ExpirationInSeconds": 3600
   }
 }
