feat: login flow with jwt + identity + ef core

--- a/src/RestApi.Infra/RestApi.Infra.csproj
+++ b/src/RestApi.Infra/RestApi.Infra.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\RestApi.Persistence\RestApi.Persistence.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Profiles\" />
+  </ItemGroup>
+
 </Project>
