--- a/src/RestApi.Persistence/RestApi.Persistence.csproj
+++ b/src/RestApi.Persistence/RestApi.Persistence.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\RestApi.Domain\RestApi.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Mappings\" />
+  </ItemGroup>
+
 </Project>
