--- a/src/RestApi/appsettings.Development.json
+++ b/src/RestApi/appsettings.Development.json
@@ -19,5 +19,13 @@
     "Audience": "Audience",
     "SecurityKey": "edaf7d8863b48e197b9287d492b708e",
     "ExpirationInSeconds": 3600
+  },
+  "EmailSender": {
+    "SMTPHost": "smtp.server.io",
+    "SMTPPort": 1234,
+    "FromEmail": "robot@restapi.com",
+    "Username": "username123",
+    "Password": "password123",
+    "TemplatesDirectory": "Templates"
   }
 }
