feat: .net template configuration

--- a/src/RestApi/appsettings.Development.json
+++ b/src/RestApi/appsettings.Development.json
@@ -12,7 +12,7 @@
     "Secret": "edaf7d8863b48e197b9287d492b708e"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=WebApiTemplate;Trusted_Connection=True;"
+    "DefaultConnection": "Server=localhost;Database=RestApi;Trusted_Connection=True;"
   },
   "JwtOptions": {
     "Issuer": "https://localhost",
