fix: use identity user/role with guid as pk

--- a/src/RestApi.Persistence/RestApi.Persistence.csproj
+++ b/src/RestApi.Persistence/RestApi.Persistence.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Mappings\**" />
+    <EmbeddedResource Remove="Mappings\**" />
+    <None Remove="Mappings\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.8" />
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="6.0.0" />
@@ -15,10 +21,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\RestApi.Domain\RestApi.Domain.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Mappings\" />
+    <ProjectReference Include="..\RestApi.Identity\RestApi.Identity.csproj" />
   </ItemGroup>
 
 </Project>
